[tool.poetry]
name = "workshop-docker"
version = "0.1.0"
description = ""
authors = ["Anderson Vieira <andersonvnascimento529@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.39.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
